--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,16 +2,55 @@ html,
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-}
-
-#container {
     width: 100%;
     height: 100%;
 }
 
-.content {
-    margin: 0 10px;
+.app {
+    background-image: url('bg-small.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
+
+.player-panel {
+    background: inherit;
+    width: 30%;
+    height: 60%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 3px 3px 10px #7C7C7C;
+}
+
+.player-panel-content {
+    text-align: center;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    /* width: 100%; */
+    height: 100%;
+}
+
+.player-panel:before{
+    width: 99999px;
+    height: 99999px;
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: -25px;
+    /* bottom: 0; */
+    /* right: 0; */
+    background: inherit;
+    box-shadow: inset 0 0 0 99999px rgba(255,255,255,0.2);
+    filter: blur(10px);
+   }
 
 .hdr {
     background-color: gray;
@@ -34,4 +73,96 @@ body {
     color: red;
 }
 
+iframe {
+    border-style:none;
+    border-width:0;
+    border-color: none;
+    border-image: none;
+}
+
+
+
+
+/*
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+  body{
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1477346611705-65d1883cee1e?dpr=0.800000011920929&auto=format&fit=crop&w=1199&h=800&q=80&cs=tinysrgb&crop=') fixed no-repeat;
+    background-size: cover;
+  }
+  #container{
+    background:inherit;
+  }
+
+  .app {
+    width: 350px;
+    height: 500px;
+    background: inherit;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    margin-left: -175px;
+    margin-top: -250px;
+    border-radius: 8px;
+  }
+
+  .app:before {
+    width: 400px;
+    height: 550px;
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: -25px;
+    bottom: 0;
+    right: 0;
+    background: inherit;
+    box-shadow: inset 0 0 0 200px rgba(255,255,255,0.2);
+    filter: blur(10px);
+  }
+
+  form img{
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+  }
+  form{
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  input{
+    background: 0;
+    width: 200px;
+    outline: 0;
+    border: 0;
+    border-bottom: 2px solid rgba(255,255,255, 0.3);
+    margin: 20px 0;
+    padding-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: rgba(255,255,255, 0.8);
+  }
+  input[type="submit"]{
+    border: 0;
+    border-radius: 8px;
+    padding-bottom: 0;
+    height: 60px;
+    background: #df2359;
+    color: white;
+    cursor: pointer;
+    transition: all 600ms ease-in-out;
+  }
+  input[type="submit"]:hover{
+    background: #C0392B;
+  }
+  span a{
+    color: rgba(255,255,255, 0.8);
+  } */
 
