--- a/app/templates/website/index.html
+++ b/app/templates/website/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
 
-    <div id="container"></div>
-
+    <div id="main"></div>
     {% render_bundle "main" %}
   </body>
 </html>
