--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,12 +20,20 @@ body {
 
 .player-panel {
     background: inherit;
-    width: 30%;
-    height: 60%;
+    width: 50%;
+    height: 75%;
+    max-width: 740px;
+    max-height: 820px;
+    min-width: 200px;
+    min-height: 300px;
     position: relative;
     overflow: hidden;
     border-radius: 8px;
     box-shadow: 3px 3px 10px #7C7C7C;
+}
+
+.controls {
+    width: 100%;
 }
 
 .player-panel-content {
@@ -36,6 +44,7 @@ body {
     transform: translate(-50%,-50%);
     /* width: 100%; */
     height: 100%;
+    color: white;
 }
 
 .player-panel:before{
